--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,1 +1,60 @@
-# todo
+name: Continuous Integration
+
+on:
+  push:
+    branches:
+      - main
+      - develop
+  pull_request:
+    branches:
+      - main
+      - develop
+
+jobs:
+  build:
+
+    runs-on: ubuntu-latest
+
+    strategy:
+      matrix:
+        go-version: [1.20, 1.21]
+
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v3
+
+      - name: Set up Go
+        uses: actions/setup-go@v4
+        with:
+          go-version: ${{ matrix.go-version }}
+
+      - name: Install Dependencies
+        run: go mod download
+
+      - name: Run Linters
+        uses: golangci/golangci-lint-action@v3
+        with:
+          version: v1.54.2
+          args: --timeout=5m
+
+      - name: Run Tests
+        run: go test -race -v ./...
+
+      - name: Run Benchmarks
+        run: go test -bench=. -run=^$ ./...
+
+      - name: Generate Coverage Report
+        run: go test -coverprofile=coverage.out ./...
+
+      - name: Upload Coverage to Codecov
+        uses: codecov/codecov-action@v3
+        with:
+          files: coverage.out
+          flags: unittests
+          fail_ci_if_error: true
+
+      - name: Build
+        run: go build ./...
+
+      - name: Security Scan
+        run: go list -m all | go run golang.org/x/vuln/cmd/govulncheck@latest
