--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,7 +17,7 @@ jobs:
 
     strategy:
       matrix:
-        go-version: [1.20, 1.21]
+        go-version: ['1.20.x', '1.21.x', '1.23.x']
 
     steps:
       - name: Checkout code
